--- a/app/src/scss/works.scss
+++ b/app/src/scss/works.scss
@@ -1,7 +1,5 @@
 #works {
-
     font-size: 2rem;
-    color: red;
 
     ul {
         margin-bottom: 1rem;
@@ -9,11 +7,36 @@
         padding: 0;
 
         li {
+            cursor: pointer;
+
             &::before {
                 content: '✓';
                 padding-right: 1rem;
             }
+
+            a {
+                color: inherit;
+                text-decoration: none;
+            }
         }
 
+    }
+}
+
+#work {
+
+    h1 {
+        font-size: 8rem;
+        word-wrap: break-word;
+    }
+
+    #content {
+        font-size: 4rem;
+    }
+
+    .back {
+        font-size: 8rem;
+        color: inherit;
+        text-decoration: none;
     }
 }
