--- a/app/src/scss/works.scss
+++ b/app/src/scss/works.scss
@@ -1,5 +1,5 @@
 #works {
-    font-size: 2rem;
+    font-size: 4rem;
 
     ul {
         margin-bottom: 1rem;
@@ -38,5 +38,12 @@
         font-size: 8rem;
         color: inherit;
         text-decoration: none;
+    }
+
+    #images {
+
+        img {
+            width: 100%;
+        }
     }
 }
