--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -6,6 +6,7 @@ body, html {
     font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
     color: red;
+    width: 100%;
 }
 
 #bio {
