--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -20,6 +20,12 @@ body, html {
     width: 100%;
     max-width: 850px;
     margin: 2em;
+    box-sizing: border-box;
+
+    @media (max-width: $breakpoint) {
+        margin: 0;
+        padding: 12px;
+    }
 }
 
 #bio {
