--- a/app/src/scss/nav.scss
+++ b/app/src/scss/nav.scss
@@ -66,7 +66,7 @@
         left: 50%;
         transform: translateX(-50%);
         width: 50%;
-        opacity: 20%;
+        opacity: 0.2;
 
         @media (max-width: $breakpoint) {
             width: 100%;
